CSS fix for aligning sections in main view

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -51,6 +51,7 @@ body {
 
 main {
   display: flex;
+  align-items: flex-start;
   & > section {
     flex-grow: 1;
   }
